--- a/render.yaml
+++ b/render.yaml
@@ -7,11 +7,4 @@ services:
     startCommand: java -jar target/VECHILE_CARE_PORTAL_APP.jar
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: VehicleDB
-          property: connectionString
-
-databases:
-  - name: VehicleDB
-    engine: postgres
-    plan: free
+        value: "postgresql://root:Le3SmqhmwlE9OkUWe0DE7MUenE5wyEmu@dpg-d2h1mrn5r7bs73fk9ef0-a.oregon-postgres.render.com/vehicle_management_ntax"
