--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: Vaishanova-Web
-    env: java-17
+    env: java20   # closest supported by Render to your local Java 21
     plan: free
     buildCommand: mvn clean package
     startCommand: java -jar target/VECHILE_CARE_PORTAL_APP.jar
